array.island.Island.scala.error
Compilation error:
Island:5: error: identifier expected but integer literal found.
    if (num[i-1]<num[i]){
              ^Island:8: error: ']' expected but '}' found.
  }
  ^Island:9: error: ')' expected but 'return' found.
  return n
  ^Island:10: error: illegal start of simple expression
} 
^